crates/api/tests/snapshots/wire_snapshots__block_add_req.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "BlockAddReq { kind: \"author\".into(), target: \"ab\".repeat(32), note: None }"
---
{
  "kind": "author",
  "target": "abababababababababababababababababababababababababababababababab",
  "note": null
}
