crates/api/tests/snapshots/wire_snapshots__file_pull_repo_result.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "FilePullRepoResult\n{ repo: \"ptr\".into(), mappings_added: 7, missing_sha256: 2, error: None, notice: None, }"
---
{
  "repo": "ptr",
  "mappings_added": 7,
  "missing_sha256": 2
}
