crates/api/tests/snapshots/wire_snapshots__gallery_sort_dto.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "GallerySortDto { key: \"imported_at\".into(), direction: \"desc\".into() }"
---
{
  "key": "imported_at",
  "direction": "desc"
}
