crates/api/tests/snapshots/wire_snapshots__hydrus_config_dto.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "HydrusConfigDto { dir: Some(\"/hydrus/db\".into()), tag_services: vec![] }"
---
{
  "dir": "/hydrus/db",
  "tag_services": []
}
