crates/api/tests/snapshots/wire_snapshots__hydrus_config_req.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "HydrusConfigReq { dir: \"/hydrus/db\".into(), tag_services: vec![1, 2] }"
---
{
  "dir": "/hydrus/db",
  "tag_services": [
    1,
    2
  ]
}
