crates/api/tests/snapshots/wire_snapshots__import_progress.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "ImportProgress { files: 10, total: 100, mappings: 55 }"
---
{
  "files": 10,
  "total": 100,
  "mappings": 55
}
